<resources>
    <string name="app_name">Inventory App</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_hint_username">Name</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="app_logo">App logo</string>
    <string name="helper_text">*Required</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_login">Login</string>
    <string name="button_forgot_password">Forgot password</string>
    <string name="error_password">Invalid password</string>
    <string name="content_description_media">Image</string>
    <string name="title">Title</string>
    <string name="secondary_text">secondaryText</string>
    <string name="supporting_text">supporting text</string>
    <string name="action_1">Edit</string>
    <string name="action_2">Delete</string>
    <string name="button_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product">Product</string>
    <string name="button">Button</string>
    <string name="all">All</string>
    <string name="food">Food</string>
    <string name="beverage">Beverage</string>
    <string name="fab_content_desc">Add new product</string>
    <string name="edit_product_image">Add product image</string>
    <string name="product_name_hint">Potato chips</string>
    <string name="product_price_hint">0.00</string>
    <string name="quantity_hint">1000</string>
    <string name="food_class_radio_button">Food</string>
    <string name="beverage_class_radio_button">Beverage</string>
    <string name="label_product_name">Name:</string>
    <string name="label_product_price">Price:</string>
    <string name="label_product_category">Category:</string>
    <string name="button_add_product">Submit</string>
    <string name="supplier">Supplier:</string>
    <string name="label_quantity">Quantity:</string>
    <string name="button_edit_discard">Back</string>
    <string name="button_edit_save">Save</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="id">Id</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="photo">Photo</string>
    <string name="role">Role</string>
    <string name="remember_me">Remember Me</string>
    <string name="reset_password">Reset Password</string>
    <string name="close">Close</string>
    <string name="suppliers">Suppliers</string>
    <string name="add">add</string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="call">Call</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="stock">Stock</string>
    <string name="product_management">Product Management</string>
    <string name="supplier_management">Supplier Management</string>
    <string name="staff_management">Staff Management</string>
    <string name="dec">Dec</string>
    <string name="inc">Inc</string>
    <string name="image">Image:</string>
    <string name="place">Place:</string>
    <string name="empty">Empty</string>
</resources>