<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddProductFragment">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/image"
        android:textColor="#12E415"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/addImage"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/addImage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="83dp" />

    <ImageView
        android:id="@+id/addImage"
        android:layout_width="188dp"
        android:layout_height="182dp"
        android:layout_marginTop="16dp"
        android:background="#C3C3C3"
        android:contentDescription="@string/edit_product_image"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_image_24"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/addImage"
        app:layout_constraintVertical_bias="0.104">

        <EditText
            android:id="@+id/addName"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/product_name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/addPrice"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/product_price_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/addQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:hint="@string/quantity_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radBtnFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_class_radio_button" />

            <RadioButton
                android:id="@+id/radBtnBeverage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beverage_class_radio_button" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinSupplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_product_name"
        android:textColor="#12E415"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/lblPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_product_price"
        android:textColor="#12E415"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/lblName" />

    <TextView
        android:id="@+id/lblClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_product_category"
        android:textColor="#12E415"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/lblQty" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_add_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/lblSupplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/supplier"
        android:textColor="#12E415"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/lblClass" />

    <TextView
        android:id="@+id/lblQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_quantity"
        android:textColor="#12E415"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/lblPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>