<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MaintainProductFragment">


    <Button
        android:id="@+id/btnDiscard"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="97dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/button_edit_discard"
        android:textColor="#0E0EB3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/btnSaveEdit"
        android:layout_width="97dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/button_edit_save"
        app:layout_constraintBottom_toBottomOf="@+id/btnDiscard"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/btnDiscard" />

    <ImageView
        android:id="@+id/imgProductEdit"
        android:layout_width="185dp"
        android:layout_height="201dp"
        android:layout_marginTop="16dp"
        android:background="#9E8F8F"
        android:contentDescription="@string/edit_product_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/lblPName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_product_name"
        android:textColor="#042883"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/lblPPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_product_price"
        android:textColor="#042883"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/lblPName" />

    <TextView
        android:id="@+id/lblClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_product_category"
        android:textColor="#042883"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/lblPPrice" />

    <TextView
        android:id="@+id/lblSupplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/supplier"
        android:textColor="#042883"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/lblClass" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="89dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/imgProductEdit">

        <EditText
            android:id="@+id/edtPName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/product_name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edtPPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/product_price_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radBtnFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_class_radio_button" />

            <RadioButton
                android:id="@+id/radBtnBeverage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beverage_class_radio_button" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinSupplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/image"
        android:textColor="#042883"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgProductEdit"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/imgProductEdit" />
</androidx.constraintlayout.widget.ConstraintLayout>