<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:clipToPadding="false">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:checkable="true"
        android:clickable="true"
        android:clipToPadding="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="219dp"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:contentDescription="@string/content_description_media"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/title"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtSec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/secondary_text"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtSupp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/supporting_text"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp" />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEditP"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_1"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDeleteP"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_2"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>